<resources>
    <string name="app_name">Dentz</string>
    <string name="ok_text">OK</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="smile_sikkim">Smile Sikkim</string>
    <string name="bringing_happiness_to_your_life">Bringing happiness to your life</string>
    <string name="powered_by_srm_sikkim">The School of Public Health Initiative</string>
    <string name="hey">Hey,</string>
    <string name="login_now">Login Now.</string>
    <string name="user_id">Mobile Number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password,</string>
    <string name="reset_now">Reset Now</string>
    <string name="login">LOGIN</string>
    <string name="please_enter_user_id">Please enter Mobile Number</string>
    <string name="please_enter_password">Please enter Password</string>
    <string name="invalid_login_details">INVALID LOGIN DETAILS</string>
    <string name="forgot">Forgot</string>
    <string name="passwords">Password?</string>
    <string name="send_password">SEND PASSWORD</string>
    <string name="password_is_sent_to_the_registered_mobile_number">Your reseted password is</string>
    <string name="dentz">Dentz</string>
    <string name="logout">LOGOUT</string>
    <string name="choose_language">Choose App Language</string>
    <string name="limit_exceed">Limit Exceed</string>
    <string name="choose_group">Choose Group:</string>
    <string name="questions">Options:</string>
    <string name="choose_message">Choose Message:</string>
    <string name="push">PUSH</string>
    <string name="please_select_group">Please select group</string>
    <string name="sent">sent</string>
    <string name="my_profile">My Profile</string>
    <string name="view_reports">View Reports</string>
    <string name="message_sent_by_admin_to_groups">Message sent By Admin To Groups</string>
    <string name="message">Message:</string>
    <string name="message_sent_to_group">Message sent to group:</string>
    <string name="invalid_user_id">Invalid User Id</string>
    <string name="no_data_available">No Data Available</string>
    <string name="message_sent_to_admin_failed_restart_app">Message Sent to Admin Failed Restart App</string>
    <string name="sent_to">\nSent to: </string>
    <string name="users_replied">\nUsers Replied: </string>
    <string name="notification_permission">Notification Permission</string>
    <string name="notification_permission_is_required_please_allow_notification_permission_from_setting">Notification permission is required, Please allow notification permission from setting</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="notification_permission_is_required_to_show_notification">Notification permission is required, to show notification</string>
    <string name="alert">Alert</string>
    <string name="show_nepali_content">Show Nepali Content</string>
</resources>