<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/appColor"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".view.GetStartedPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="230sp"
            android:layout_height="180sp"
            android:src="@drawable/srmnight">

        </ImageView>

        <!--text view for heading-->
        <TextView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/smile_sikkim"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="37sp" />

        <!--text view for sub heading-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/bringing_happiness_to_your_life"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:layout_marginTop="10sp"
            android:theme="@style/loginPageSubHeadingTextTheme" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:gravity="center"
        android:text="@string/powered_by_srm_sikkim"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:theme="@style/loginPageSubHeadingTextTheme" />


</LinearLayout>