<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appColor"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10sp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:fontFamily="@font/regular"
            android:text="@string/dentz"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="60sp"
            android:layout_height="40sp"
            android:layout_weight="1"
            android:src="@drawable/homepagedental" />

        <ImageView
            android:id="@+id/profile"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_gravity="center"
            android:layout_marginEnd="10sp"
            android:src="@drawable/profilepic" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginBottom="10sp"
        android:background="@color/grey">

    </View>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/choosemessage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20sp"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/regular"
                        android:text="@string/choose_message"
                        android:textColor="@color/black"
                        android:textSize="19sp"
                        android:textStyle="bold"
                        android:visibility="gone" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/messageList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginStart="30sp"
                        android:layout_marginTop="5sp"
                        android:layout_marginEnd="30sp"
                        android:layout_marginBottom="5sp"
                        tools:itemCount="1"
                        tools:listitem="@layout/message_item" />

                </LinearLayout>

                <TextView
                    android:id="@+id/choosegroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20sp"
                    android:layout_marginTop="5sp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/regular"
                    android:text="@string/choose_group"
                    android:textColor="@color/black"
                    android:textSize="19sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/groupList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="20sp"
                    android:layout_marginEnd="30sp"
                    tools:itemCount="1"
                    tools:listitem="@layout/group_item" />

                <LinearLayout
                    android:id="@+id/textContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20sp"
                    android:background="@drawable/board"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <androidx.core.widget.NestedScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/messagecontent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="20sp"
                            android:fontFamily="@font/regular"
                            android:gravity="center"
                            android:textColor="@color/black"
                            android:textSize="17sp"
                            android:textStyle="bold" />
                    </androidx.core.widget.NestedScrollView>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/audioContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20sp"
                    android:background="@drawable/board"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10sp"
                        android:layout_marginTop="20sp"
                        android:layout_marginEnd="10sp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <TextView
                            android:id="@+id/txtSongStart"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_toLeftOf="@id/seekBar"
                            android:fontFamily="@font/regular"
                            android:text="00:00"
                            android:textColor="@color/black"
                            android:textSize="13sp"
                            android:textStyle="bold" />

                        <SeekBar
                            android:id="@+id/seekBar"
                            android:layout_width="250dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1" />

                        <TextView
                            android:id="@+id/txtSongEnd"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_toRightOf="@id/seekBar"
                            android:fontFamily="@font/regular"
                            android:text=""
                            android:textColor="@color/black"
                            android:textSize="13sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20sp"
                        android:gravity="center">

                        <com.google.android.material.floatingactionbutton.FloatingActionButton
                            android:id="@+id/replayBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:scaleType="center"
                            android:src="@drawable/ic_replay"
                            app:fabSize="mini" />


                        <com.google.android.material.floatingactionbutton.FloatingActionButton
                            android:id="@+id/prevBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:layout_marginEnd="10sp"
                            android:layout_marginBottom="20sp"
                            android:padding="10sp"
                            android:src="@drawable/ic_previous"
                            android:visibility="gone" />

                        <com.google.android.material.floatingactionbutton.FloatingActionButton
                            android:id="@+id/playBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10sp"
                            android:layout_marginBottom="10sp"
                            android:src="@drawable/ic_play" />


                        <com.google.android.material.floatingactionbutton.FloatingActionButton
                            android:id="@+id/forBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_forward"
                            app:fabSize="mini" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/videoContent"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_margin="20sp"
                    android:background="@drawable/board"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <com.google.android.exoplayer2.ui.StyledPlayerView
                        android:id="@+id/playerView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:focusable="true">

                        <ProgressBar
                            android:id="@+id/progressBar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:visibility="gone" />

                    </com.google.android.exoplayer2.ui.StyledPlayerView>

                </LinearLayout>

                <TextView
                    android:id="@+id/choosoptions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20sp"
                    android:layout_marginBottom="10sp"
                    android:fontFamily="@font/regular"
                    android:text="@string/questions"
                    android:textColor="@color/black"
                    android:textSize="19sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/donarList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="30sp"
                    android:layout_marginEnd="30sp"
                    android:layout_marginBottom="10sp"
                    tools:itemCount="1"
                    tools:listitem="@layout/donar_item" />


            </LinearLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginEnd="20sp"
                android:layout_marginBottom="20sp"
                android:padding="10sp"
                android:src="@drawable/baseline_send" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/loading"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <RelativeLayout
            android:id="@+id/loaderView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#55494646"
            android:clickable="true"
            android:visibility="gone">

            <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center" />
        </RelativeLayout>


    </FrameLayout>

</LinearLayout>